
Package: PSCBS
==============

Version: 0.10.0 [2011-05-29]
o Renamed options, example code and help pages to reflect new package name.
o Updated help page references.
o Renamed package to PSCBS (from 'psCBS').


Version: 0.9.54 [2011-04-27]
o Added argument 'maxC' to estimateTauLOHByMinC1ForNonAB().


Version: 0.9.53 [2011-04-14]
o Added argument 'max' to estimateTauAB() and estimateTauLOH().


Version: 0.9.52 [2011-04-14]
o BUG FIX: Argument 'minSize' of callAB() and callLOH() had no effect.


Version: 0.9.51 [2011-04-12]
o Added argument 'minSize' to callAB() and callLOH() for PairedPSCBS.
o Now the a conflicting call in callLOH()/callAB() with 
  argument xorCalls=TRUE is set to NA to contrast it from
  a FALSE call.


Version: 0.9.50 [2011-04-12]
o Added argument 'xorCalls' to callLOH() and callAB() for
  PairedPSCBS.  When TRUE (the default), a segment that 
  is already called AB will never be called LOH, and vice versa.


Version: 0.9.49 [2011-04-11]
o Updated estimateTauABBySmallDH() for PairedPSCBS to use a
  "symmetric" quantile estimator.
o Added argument 'midpoint' to estimateTauLOHByMinC1AtNonAB().
o BUG FIX: The recent callLOH() would not store the LOH calls.


Version: 0.9.48 [2011-04-10]
o Added callLOH() for PairedPSCBS, which in turn calls 
  auxillary methods.
o Added estimateTauLOH() for PairedPSCBS, which in turn calls 
  auxillary methods.
o Now callAB(..., force=FALSE) skips the caller if
  allelic-balance calls already exist.
o DOCUMENTATION: Update the exampe for segmentByPairedPSCBS
  to reflect the restructured AB and LOH callers.


Version: 0.9.47 [2011-04-08]
o Added estimateTauABBySmallDH()
o Added internal weightedQuantile().
o DOCUMENTATION: Added help pages for more methods.
o CLEANUP: Started to restructure the source code files.


Version: 0.9.46 [2011-04-08]
o BUG FIX: postsegmentTCN() for PairedPSCBS could generate an invalid
  'tcnSegRows' matrix, where the indices for two consecutive segments