@@ -1,9 +1,9 @@
 Package: PSCBS
-Title: Analysis of Parent Specific DNA Copy Numbers
+Title: Analysis of Parent-Specific DNA Copy Numbers
 Version: 0.10.0
 Date: 2011-05-29
 Author: A.B. Olshen, H. Bengtsson, P. Neuvial, P. Spellman, R.A. Olshen, V.E. Seshan
-Description: Segments allele specific DNA copy number data to detect regions 
+Description: Segments allele-specific DNA copy number data to detect regions 
 	with abnormal copy number within each parental chromosome
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: DNAcopy (>= 1.24.0), R.methodsS3 (>= 1.2.1), R.utils (>= 1.7.5)
