@@ -7,13 +7,13 @@
 #  @classhierarchy
 #
 #  A PairedPSCBS is an object containing the results from the
-#  paired PSCBS method.
+#  Paired PSCBS method.
 # }
 # 
 # \usage{PairedPSCBS(fit=list(), ...)}
 #
 # \arguments{
-#   \item{fit}{A @list structure containing the paired PSCBS results.}
+#   \item{fit}{A @list structure containing the Paired PSCBS results.}
 #   \item{...}{Not used.}
 # }
 #
