@@ -3,6 +3,7 @@ Package: PSCBS
 ==============
 
 Version: 0.10.0 [2011-05-29]
+o Now the paired PSCBS is formally referred to as 'Paired PSCBS'.
 o Renamed options, example code and help pages to reflect new package name.
 o Updated help page references.
 o Renamed package to PSCBS (from 'psCBS').
